@startuml
skinparam classAttributeIconSize 0

' Interfaces
interface ICloneable {
    + Clone() : object
}

interface IComparable_Question {
    + CompareTo(other: Question) : int
}

interface IComparable_Exam {
    + CompareTo(other: Exam) : int
}

' Classes
class Answer {
    - AnswerId : int
    - AnswerText : string
    + ToString() : string
    + Clone() : object
}

abstract class Question {
    - Header : string
    - Body : string
    - Mark : int
    - AnswerList : Answer[]
    + DisplayQuestion() : void
    + ToString() : string
    + CompareTo(q:Question) : int
}

class MCQQuestion {
    + DisplayQuestion() : void
}

class TFQuestion {
    + DisplayQuestion() : void
}

abstract class Exam {
    - options : string[,]
    - Questions : Question[]
    - UserAnswers : Answer[]
    - Time : int
    - Number : int
    + TypeOfExam() : void
    + CreateQuestions(start:int,end:int) : void
    + ShowExam() : void
    + ToString() : string
    + CompareTo(exam:Exam) : int
}

class PracticalExam {
    - totalGrade : int
    - userGrade : int
    + CreateQuestions(start:int,end:int) : void
    + TypeOfExam() : void
    + ShowExam() : void
    + DisplayAnswer() : void
}

class FinalExam {
    + CreateQuestions(start:int,end:int) : void
    + TypeOfExam() : void
    + DisplayAnswer() : void
    + ShowExam() : void
}

class Subject {
    - SubjectId : int
    - SubjectName : string
    - Exam : Exam
    + CreateExam() : void
    + ToString() : string
}

' Relationships
Answer ..|> ICloneable
Question ..|> IComparable_Question
Exam ..|> IComparable_Exam

MCQQuestion --|> Question
TFQuestion --|> Question

PracticalExam --|> Exam
FinalExam --|> PracticalExam

Subject --> Exam
Exam o-- Question
Question o-- Answer

@enduml
